Registration: Fixing widths on all steps. Making button right-aligned. Styling Subscribe Pages step. Styling error handling. Styled scrollbar for webkit browsers.

--- a/app/stylesheets/base/_modals.sass
+++ b/app/stylesheets/base/_modals.sass
@@ -58,17 +58,18 @@
   .error
     background-color: rgba(0, 0, 0, 0.03)
     +border-radius(4px)
+    clear: both
+    font-family: $body
+    font-size: 11px
+    font-weight: bold
     color: $red
-    display: none
-    margin-top: -4px
-    margin-bottom: 9px
-    padding: 8px
-    font-family: $heading
-    font-size: 18px
-    text-align: center
-    text-transform: capitalize
-    width: 378px
+    text-transform: uppercase
     float: left
+    display: none
+    margin-bottom: 9px
+    padding: 8px 0px
+    text-align: center
+    width: 100%
     text-shadow: 0px 1px 0px white
     box-shadow: 0px 1px 0px white, inset 0px 0px 6px rgba(0,0,0,0.25)
 
