--- a/app/stylesheets/layout/_postbox.sass
+++ b/app/stylesheets/layout/_postbox.sass
@@ -1079,7 +1079,7 @@ div.form-container
 //form.create-announcement
   width: 320px
 .new-announcement
-  span.divider
+  //span.divider
     margin-top: 15px !important
     margin-bottom: 0px !important
   h3
@@ -1090,7 +1090,6 @@ div.form-container
     border-bottom: 1px solid #c5c2b5
     padding-bottom: 5px
   ul 
-    padding: 0px
     li
       padding: 3px 8px
       text-decoration: none
@@ -1111,15 +1110,13 @@ div.form-container
       background-position: top left     
       display: block  
       overflow:hidden
-      &:hover
+      margin-bottom: 15px
+      //&:hover
         color: $blue !important
         background-position: top left !important 
   p
     font-family: $heading
-    font-size: 15px
     line-height: 18px
-    color: #555
     float: left
-    margin-top: 13px
+    margin-bottom: 10px
     text-shadow: 1px 1px 0px white
-    font-weight: bold
